// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress[Base] should render correctly  1`] = `
<div
  class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  style="width: 400px;"
>
  <div
    class="soui-progress-line-bg"
  >
    <div
      class="soui-progress-line-front"
      style="width: 75%;"
    />
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about animation 1`] = `
<div>
  <div>
    <div
      class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
      style="width: 400px;"
    >
      <div
        class="soui-progress-line-bg"
      >
        <div
          class="soui-progress-line-front"
          style="width: 0%;"
        />
      </div>
      <div
        class="soui-progress-content"
      >
        <div
          style="width: 50px;"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 24px;"
  >
    <div
      class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-success"
      style="width: 64px; height: 64px;"
    >
      <svg
        viewBox="0 0 64 64"
      >
        <circle
          class="soui-progress-circle-bg"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-width="4"
        />
        <circle
          class="soui-progress-circle-front"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-dasharray="0,188.49555921538757"
          stroke-linecap="round"
          stroke-width="0"
        />
      </svg>
      <div
        class="soui-progress-content"
      >
        0%
      </div>
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    style="margin-top: 24px;"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about circle 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="0,188.49555921538757"
        stroke-linecap="round"
        stroke-width="0"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      0%
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      60%
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-warning"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="131.9468914507713,56.54866776461628"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.4331 4.48155C10.4051 3.91069 10.8604 3.4325 11.4319 3.4325H12.5713C13.1428 3.4325 13.5981 3.91069 13.5701 4.48155L13.0683 14.6976C13.0422 15.2301 12.6027 15.6485 12.0695 15.6485H11.9337C11.4005 15.6485 10.9611 15.2301 10.9349 14.6976L10.4331 4.48155ZM11.9896 16.9445C12.5176 16.9445 12.9736 17.1125 13.3336 17.4485C13.6696 17.7845 13.8616 18.2165 13.8616 18.7445C13.8616 19.2725 13.6696 19.7285 13.3336 20.0645C12.9496 20.4005 12.5176 20.5685 11.9896 20.5685C11.4616 20.5685 11.0296 20.3765 10.6936 20.0405C10.3096 19.7045 10.1416 19.2725 10.1416 18.7445C10.1416 18.2165 10.3096 17.7845 10.6936 17.4485C11.0296 17.1125 11.4616 16.9445 11.9896 16.9445Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-success"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="188.49555921538757,0"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M1.2947 13.0708L6.95013 18.7262C7.73219 19.5083 8.99933 19.5083 9.78139 18.7262L21.1217 7.38591C21.512 6.99559 21.512 6.36202 21.1217 5.9717C20.7314 5.58137 20.0978 5.58137 19.7075 5.9717L8.31714 17.0881L2.70891 11.6566C2.31859 11.2663 1.68502 11.2663 1.2947 11.6566C0.904372 12.0469 0.904372 12.6805 1.2947 13.0708Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-danger"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="169.64600329384882,18.84955592153875"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about color 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      40%
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%;"
      >
        <div
          class="soui-progress-content"
        >
          75%
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <defs>
        <lineargradient
          id="progress-linear"
          x1="50%"
          x2="50%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0%"
            stop-color="#19A9FA"
          />
          <stop
            offset="100%"
            stop-color="#7949FF"
          />
        </lineargradient>
      </defs>
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
        style="stroke: url('#progress-linear');"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      60%
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about lineInner 1`] = `
<div
  style="display: flex; flex-direction: column; gap: 24px; width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner soui-progress-line-inner-right"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 0%;"
      >
        <div
          class="soui-progress-content"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner soui-progress-line-inner-right"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 5%;"
      >
        <div
          class="soui-progress-content"
        >
          5%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="soui-progress-content"
        >
          10%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-warning soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 50%;"
      >
        <div
          class="soui-progress-content"
        >
          50%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-success soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 100%;"
      >
        <div
          class="soui-progress-content"
        >
          100%
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-danger soui-progress-line-inner"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 60%;"
      >
        <div
          class="soui-progress-content"
        >
          60%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about linePop 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default soui-progress-line-pop"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 0%;"
      />
    </div>
    <div
      class="soui-progress-line-pop-wrapper"
      style="left: 0%; transform: translateX(-50%) rotate(0deg);"
    >
      <span
        class="soui-progress-line-pop-value"
      >
        0%
      </span>
      <span
        class="soui-progress-line-pop-arrow"
      />
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    style="margin-top: 24px;"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span>
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 64px; height: 64px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span>
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 2`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 3px; border-radius: 1.5px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%; border-radius: 1.5px;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 16px; border-radius: 8px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%; border-radius: 8px;"
      >
        <div
          class="soui-progress-content"
        >
          <span
            style="font-size: 12px;"
          >
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 48px; height: 48px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 48 48"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-dasharray="82.93804605477052,55.29203070318036"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 3`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 8px; border-radius: 4px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 75%; border-radius: 4px;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="soui-progress-line-bg"
      style="height: 24px; border-radius: 12px;"
    >
      <div
        class="soui-progress-line-front"
        style="width: 40%; border-radius: 12px;"
      >
        <div
          class="soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-progress soui-progress-circle soui-progress-wrapper soui-progress-wrapper-info"
    style="width: 80px; height: 80px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 80 80"
    >
      <circle
        class="soui-progress-circle-bg"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-width="4"
      />
      <circle
        class="soui-progress-circle-front"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-dasharray="143.25662500369455,95.50441666912971"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about type 1`] = `
<div
  style="width: 400px; display: flex; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-success soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 100%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      100%
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-info soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 90%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      90%
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-warning soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 80%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      80%
    </div>
  </div>
  <div
    class="soui-progress soui-progress-line soui-progress-wrapper soui-progress-wrapper-danger soui-progress-line-default"
  >
    <div
      class="soui-progress-line-bg"
    >
      <div
        class="soui-progress-line-front"
        style="width: 70%;"
      />
    </div>
    <div
      class="soui-progress-content"
    >
      70%
    </div>
  </div>
</div>
`;
